--- a/_posts/其它-Other/2018-03-13-website.markdown
+++ b/_posts/其它-Other/2018-03-13-website.markdown
@@ -13,9 +13,6 @@ other: true
 
 ## Google相关 ##
 
-**Google 开发者登录网址**<br>
-<a href="https://play.google.com/apps/publish/signup/" style="text-decoration: none;" target="\_blank" title="">https://play.google.com/apps/publish/signup/</a>
-
 **Google 所有产品文档网址**<br>
 <a href="https://developers.google.com/products/" style="text-decoration: none;" target="\_blank" title="">https://developers.google.com/products/</a>
 
@@ -35,8 +32,52 @@ other: true
 <a href="https://support.google.com/analytics#topic=3544906" style="text-decoration: none;" target="\_blank" title="">https://support.google.com/analytics#topic=3544906</a>
 
 
+## 开发者平台 ##
+
+**Google**<br>
+<a href="https://play.google.com/apps/publish/signup/" style="text-decoration: none;" target="\_blank" title="">https://play.google.com/apps/publish/signup/</a>
+
+**应用宝**<br>
+<a href="http://open.qq.com/" style="text-decoration: none;" target="\_blank" title="">http://open.qq.com/</a>
+
+**百度**<br>
+<a href="https://developer.baidu.com/" style="text-decoration: none;" target="\_blank" title="">https://developer.baidu.com/</a>
+
+**华为**<br>
+<a href="http://developer.huawei.com/consumer/cn/" style="text-decoration: none;" target="\_blank" title="">http://developer.huawei.com/consumer/cn/</a>
+
+**小米**<br>
+<a href="https://dev.mi.com/console/" style="text-decoration: none;" target="\_blank" title="">https://dev.mi.com/console/</a>
+
+**安智**<br>
+<a href="http://dev.anzhi.com/" style="text-decoration: none;" target="\_blank" title="">http://dev.anzhi.com/</a>
+
+**阿里应用分发(整合了豌豆荚、阿里巴巴·九游、PP助手、UC应用商店、神马搜索，并联合YunOS应用商店)**<br>
+<a href="http://open.uc.cn/" style="text-decoration: none;" target="\_blank" title="">http://open.uc.cn/</a>
+
+**360**<br>
+<a href="http://dev.360.cn/" style="text-decoration: none;" target="\_blank" title="">http://dev.360.cn/</a>
+
+**百度**<br>
+<a href="https://app.baidu.com/" style="text-decoration: none;" target="\_blank" title="">https://app.baidu.com/</a>
+
+**vivo**<br>
+<a href="https://dev.vivo.com.cn/" style="text-decoration: none;" target="\_blank" title="">https://dev.vivo.com.cn/</a>
+
+**oppo**<br>
+<a href="https://open.oppomobile.com/" style="text-decoration: none;" target="\_blank" title="">https://open.oppomobile.com/</a>
+
+**91**<br>
+<a href="http://market.sj.91.com/" style="text-decoration: none;" target="\_blank" title="">http://market.sj.91.com/</a>
 
 
+## API平台 ##
+
+**百度API**<br>
+<a href="http://developer.baidu.com/platform/s38" style="text-decoration: none;" target="\_blank" title="">http://developer.baidu.com/platform/s38</a>
+
+**聚合API**<br>
+<a href="https://www.juhe.cn/docs" style="text-decoration: none;" target="\_blank" title="">https://www.juhe.cn/docs</a>
 
 
 ## 云服务 ##
@@ -47,3 +88,22 @@ other: true
 
 **阿里云服务**<br>
 <a href="https://www.aliyun.com/?utm_medium=text&utm_source=bdbrand&utm_campaign=bdbrand&utm_content=se_32492" style="text-decoration: none;" target="\_blank" title="">https://www.aliyun.com/?utm_medium=text&utm_source=bdbrand&utm_campaign=bdbrand&utm_content=se_32492</a>
+
+
+
+## 代码托管 ##
+
+**GitHub**<br>
+<a href="https://github.com/" style="text-decoration: none;" target="\_blank" title="">https://github.com/</a>
+
+**码云（开源中国）**<br>
+<a href="http://git.oschina.net/" style="text-decoration: none;" target="\_blank" title="">http://git.oschina.net/</a>
+
+**TaoCode（淘宝）**<br>
+<a href="http://code.taobao.org/login/" style="text-decoration: none;" target="\_blank" title="">http://code.taobao.org/login/</a>
+
+**CSDN**<br>
+<a href="https://code.csdn.net/" style="text-decoration: none;" target="\_blank" title="">https://code.csdn.net/</a>
+
+**代码托管 CodeHub（华为）**<br>
+<a href="https://www.huaweicloud.com/product/codehub.html" style="text-decoration: none;" target="\_blank" title="">https://www.huaweicloud.com/product/codehub.html</a>
