--- a/_posts/其它-Other/2018-04-24-stock.markdown
+++ b/_posts/其它-Other/2018-04-24-stock.markdown
@@ -9,7 +9,10 @@ author: # Add name author (optional)
 other: true
 ---
 
-1. 压力位，支撑位，均线支撑
+1. 支撑位，压力位，均线支撑
+
+大跌与反弹形成的V字底，是后期走势的一个支撑位，若后期走势跌破前期的支撑位（多日均破支撑位），则需要注意风险，适当减仓，若能稳住支撑位不破（大多数日不破），则可继续持仓。<br>
+大涨与下跌形成的Λ字顶，是后期走势的一个压力位，每次个股走到这个位置应该减仓，若突破不了压力位，则可能下跌，若突破压力位，需要看是否多日都成功突破，确认站稳突破压力位则可能继续上涨。<br>
 
 1. 回补缺口
 
