--- a/_posts/其它-Other/2018-04-24-stock.markdown
+++ b/_posts/其它-Other/2018-04-24-stock.markdown
@@ -8,11 +8,37 @@ tags: [股票]
 author: # Add name author (optional)
 other: true
 ---
+https://baike.baidu.com/item/%E5%9D%87%E7%BA%BF%E5%BC%BA%E5%8A%9B%E6%94%AF%E6%92%91/8283190?fr=aladdin
+https://baike.baidu.com/item/%E6%94%AF%E6%92%91%E4%BD%8D/6248266?fr=aladdin
+https://jingyan.baidu.com/article/fcb5aff7a05d36edab4a7173.html
+https://wapbaike.baidu.com/item/%E8%82%A1%E7%A5%A8%E7%BC%BA%E5%8F%A3/1874904?fr=aladdin
 
-1. 支撑位，压力位，均线支撑
+1. 支撑位，压力位
+支撑位：
+概念：
+大跌与反弹形成的V字底，需配合前期几个V字底来确认V字底位置，是后期走势的一个支撑位，因为前阶段反复出现这一价位区间，累积了较大的成交量也是密集成交区，当股价升至这一密集成交区以上，一般也不会在这个区间抛售筹码。
+当行情由上向下靠拢时，做空者获利筹码已清，做多者趁机低吸，举棋不定者套牢已深，不会轻易斩仓，且行情多次在这个价位区间回头，也确立了广大投资者的心里支撑价位，只要无特大利空消息出台，行情将获撑反弹。
+操作：
+成交量：当然若后期走势跌破前期的支撑位（经几日确认），有利空，有成交量配合，则要注意风险，适当减仓，稍有回档也要减仓或者还未跌破支撑线，但无成交量配合，也应该减仓。若能稳住支撑位不破，破了马上又回升，没有量的配合，无各种利空出现，
+        则可考虑适当 建仓或者补仓，仓位要控制好。
+   K线：上升趋势，回档过程中，阴K线较之前的阳线弱，尤其接近支撑价位时，成交量萎缩，而后阳K线迅速吃掉阴K线，股价再上升，这是有效的支持，若频现阴线，在支撑位附件略做反弹，接手乏力，则股价将跌破支撑线。
+     在支撑线附近经过一段时间的盘档，出现长阳线，支撑也是比较有效，若出现一根长阴线，则可能继续下跌
 
-大跌与反弹形成的V字底，是后期走势的一个支撑位，若后期走势跌破前期的支撑位（多日均破支撑位），则需要注意风险，适当减仓，若能稳住支撑位不破（大多数日不破），则可继续持仓。<br>
-大涨与下跌形成的Λ字顶，是后期走势的一个压力位，每次个股走到这个位置应该减仓，若突破不了压力位，则可能下跌，若突破压力位，需要看是否多日都成功突破，确认站稳突破压力位则可能继续上涨。<br>
+
+利空，成交量，K线
+
+
+均线支撑，有5,10,30日均线支撑
+压力位：
+大涨与下跌形成的Λ字顶，需配合前期几个Λ字顶来确认Λ字顶位置，是后期走势的一个压力位，当价位上升至这一区间，因卖气大增，买方又不愿追高，，阻力线也在密集成交区，当交易价已在该密集区间以下时
+上面有大量的套牢者，所有越靠近阻力线，对于前景看坏者或者急于解套平仓或者获利回吐，因而有大量抛盘涌出。
+有些对后市看好者建仓，但若势单力薄，无大成交量配合，无利好，价位将重回阻力之下，反复多次的阻力未突破，则越难突破
+当迫近阻力线，有利多消息出现，有成交量的放大配合，则为有效突破，突破后压力位则成为支撑位。若因特大利多消息刺激，成交密集区轻易突破，跳空,那么获利回吐压力增大，继续上行也会收到考验。
+
+操作：
+成交量：每次个股走到这个位置应该减仓，若突破不了，或者突破了无成交量配合，无利好，则可能下跌，若突破压力位（经几日确认），则可能继续上涨。<br>
+   K线：下跌趋势出现反弹，
+
 
 1. 回补缺口
 
