--- a/_posts/测试相关-abouttest/2018-05-22-mysql.markdown
+++ b/_posts/测试相关-abouttest/2018-05-22-mysql.markdown
@@ -25,7 +25,7 @@ MySQL Workbench，可视化的，有界面 <br>
 我的电脑右键->属性->高级系统设置->环境变量->下面那个编辑->变量名PATH，变量值 **E:\SoftwareInstall\StudySoftware\mysql-5.7.22-winx64** <br>
 
 **4.初始化** <br>
-1. 进入到bin目录 cd E:\SoftwareInstall\StudySoftware\mysql-5.7.22-winx64\bin，**执行mysqld –install**，命令行必须右键以管理员身份启动，否则会报Install/Remove of the Service Denied!，安装成功会提示Service successfully installed
+1. 进入到bin目录 cd E:\SoftwareInstall\StudySoftware\mysql-5.7.22-winx64\bin，执行 **mysqld –install**，命令行必须右键以管理员身份启动，否则会报Install/Remove of the Service Denied!，安装成功会提示Service successfully installed
 
 2. 执行 **net start mysql** ,若提示 “服务报告没有任何错误”，则执行在mysql的bin目录下执行 **mysqld  --initialize-insecure**
 
