--- a/_posts/测试相关-abouttest/2018-05-22-mysql.markdown
+++ b/_posts/测试相关-abouttest/2018-05-22-mysql.markdown
@@ -44,6 +44,8 @@ MySQL Workbench，可视化的，有界面 <br>
 
 1. 创建表 **create table test (name varchar(25),password varchar(25));**
 
+1. 查看表 **show tables;**
+
 ## MySql可视化操作 ##
 
 可下载工具 **Navicat for MySQL** 主机名localhost，端口3306，用户名root，密码不用输入，点击连接测试，若成功，点确定，即可在列表中出现localhost_3306，里面即可看到上面命令行创建的leachchen数据库
