--- a/_posts/其它-Other/2018-05-29-api.markdown
+++ b/_posts/其它-Other/2018-05-29-api.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 网址摘记
+title: API网址
 date:  2018-05-29 14:11:00 +0900  
-description:  网址摘记
+description:  API网址
 img: post-4.jpg # Add image post (optional)
 tags: [Other]
 author: # Add name author (optional)
