--- a/_posts/其它-Other/2018-02-25-car.markdown
+++ b/_posts/其它-Other/2018-02-25-car.markdown
@@ -14,25 +14,25 @@ other: true
 系好安全带，点火，放下手刹，挂一档起步。
 
 1. 倒车入库<br>
-挂前进挡，沿着白线，车凹槽处对着白线往前开，肩膀与线平齐时停车，挂倒挡，头轻微倾斜，白线从后视镜夹角处刚好消失时，左打死，低头看后视镜，后视镜看到车身即将与白线平行时，回正方向，后视镜看到车轮过水泥缝三公分时停车。
+挂前进挡，沿着白线，车凹槽处对着白线往前开，肩膀与线平齐时停车，挂倒挡，头轻微倾斜，白线从后视镜夹角处刚好消失时，迅速左打死，低头看后视镜，后视镜看到车身即将与白线平行时，回正方向，若左边距离较大，则等车平行后过一秒回正方向。后视镜看到车轮过水泥缝三公分时停车。
 挂前进挡，看后视镜，车轮离水泥缝还有五公分时右打一圈加九十度，当肩膀对齐远处白线角或者车门与白线成一定夹角时停车。
 挂倒挡，低头看后视镜，看远处石头库角，若肩膀离白线还有二十公分左右，石头库角还没出现，则右打死，若出现了，白线库角过了两秒还没出现则右打死，否则正常行驶，当看到车库白线库角出来三到五公分时，回正方向，看后视镜，车轮过水泥缝三公分时停车。
 挂前进挡，看后视镜，当车轮离水泥缝还有五公分时左打死，当车凹槽处对准白线时回正方向。
 
-1. 上坡定点
+1. 上坡定点<br>
 若前方有车正在考试时，车往前开，后视镜看到车轮对到白色箭头时停车等待
-车凹槽处对着坡上第二和第三根线的中间位置往前开，快接近右侧竖直杆时往右看，当看到挡阳板后线处对到杆时停车，按住手刹往上提数三秒放下，松离合器，掉下一格时，刹车慢放，左打就是度使得车凹槽处对着白线往前开。
+车凹槽处对着坡上第二和第三根线的中间位置往前开，快接近右侧竖直杆时往右看，当看到挡阳板后线处对到杆时停车，按住手刹往上提数三秒放下，松离合器，掉下一格时，刹车慢放，左打九十度使得车凹槽处对着白线往前开。
 
-1. 直角转弯
+1. 直角转弯<br>
 当车刚下坡时，转向灯往下按，开启左转向灯，往前开，尽量不要轮方向盘，若转向灯灭了需要立马打开，看后视镜夹角处，当黄色直角刚好消失时关掉左转向灯，车头前白线即将消失时左打死，看后视镜，车身与白线对齐时回正方向
 
-1. 侧方位停车
+1. 侧方位停车<br>
 肩膀与线平行时左打死，调整方向，使人对着前面的箭头往前开，当箭头尾部刚好消失时停车，挂倒挡，看右后视镜，库角消失右打一圈，看左后视镜，看到线50-60公分处，左打一圈，车轮即将压线时左打死，经线和前面石头线或者地上的线平行时停车，打开左转向灯，挂前进挡，当车头经线即将碰到白线，白线即将消失时，回正方向，线到车中间一半时，右打一圈，人与箭头将要平行时回正方向，看后视镜，车离开边线时才可调整方向，进入曲线行驶。
 
-1. 曲线行驶
+1. 曲线行驶<br>
 车往前开，调整车方向使得车头在曲线中间位置，经线即将碰线，左打一圈，出去左加，进来端平，保持经线在里面，当车头在正中间继续往前开，经线即将碰线时回正，线到车头快中间位置时右打一圈，微调方向盘，使得车头和左边曲线成一定夹角，后视镜看到车即将离开曲线时调整方向
 
-1. 调整方向使得车经线对齐白线
+1. 调整方向使得车经线对齐白线<br>
 车轮在线左边，先副驾驶方向打180度，看后视镜，看到白线回正，即将压线左打180度，车身和线平行后回正，车凹槽处对着线往前开
 
 
