--- a/_posts/其它-Other/2018-06-26-git.markdown
+++ b/_posts/其它-Other/2018-06-26-git.markdown
@@ -40,10 +40,16 @@ Git命令行比打开客户端操作更快捷，持续更新。
 1. 推送远程仓库
 >$ git push [remoteName] [localBranchName]
 
+1. 免密码（还有其它几种方式，我没有试验过，这个试了可以）
+git remote set-url origin https://yourname:password@bitbucket.org/leach-chen/leach-chen.github.io.git
+
 ## 分支(branch)操作相关命令 ##
 
 1. 查看本地分支
 >$ git branch
+
+1. 查看本地分支及映射
+>git branch -a
 
 1. 查看远程分支
 >$ git branch -r
