--- a/_posts/其它-Other/2018-06-26-git.markdown
+++ b/_posts/其它-Other/2018-06-26-git.markdown
@@ -41,9 +41,9 @@ Git命令行比打开客户端操作更快捷，持续更新。
 >$ git push [remoteName] [localBranchName]
 
 1. <a href="https://www.jianshu.com/p/7182b2faab84" style="text-decoration: none;" target="\_blank"  title="">免密码</a>
->方式一：<br>
+>方式一（该方式设置了我不知道怎么取消记住密码）：<br>
 git remote set-url origin https://yourname:password@leach-chen/leach-chen.github.io.git @后面是仓库地址<br> <br>
->方式二：<br>
+>方式二（该方式设置了，删除.git-credentials文件，即可取消记住密码）：<br>
  在Git bash命令行里面输入：touch .git-credentials <br>
  然后会在 ：C:\Users\你的用户名 目录下生成.git-credentials文件，打开该文件 <br>
  输入：https://yourname:password@github.com,@后面跟的是域名<br>
