--- a/_posts/其它-Other/2018-02-27-tool.markdown
+++ b/_posts/其它-Other/2018-02-27-tool.markdown
@@ -36,3 +36,5 @@ other: true
 - **禅道，JIRA** bug管理平台
 
 - **<a href="https://github.com/Genymobile/scrcpy" style="text-decoration: none;" target="_blank"  title="">scrcpy</a>** 手机屏幕可以实时投射到电脑，且电脑上可以直接控制手机的一款软件
+
+- **WinHex** 二进制查看
