--- a/_posts/其它-Other/2018-03-13-website.markdown
+++ b/_posts/其它-Other/2018-03-13-website.markdown
@@ -9,6 +9,8 @@ author: # Add name author (optional)
 other: true
 ---
 
+{{site.label1}} <a href="https://github.com/leach-chen/leach-chen.github.io/" target="\_blank">Leach Chen</a> {{site.label2}}
+
 网址摘记,持续更新.........
 
 ## Android ICON##
