--- a/_posts/其它-Other/2018-05-29-api.markdown
+++ b/_posts/其它-Other/2018-05-29-api.markdown
@@ -9,6 +9,9 @@ author: # Add name author (optional)
 other: true
 ---
 
+{{site.label1}} <a href="https://github.com/leach-chen/leach-chen.github.io/" target="\_blank">Leach Chen</a> {{site.label2}}
+
+
 记录提供API的网站,持续更新.........
 
 **聚合数据**<br>
