--- a/_posts/其它-Other/2018-03-15-3d.markdown
+++ b/_posts/其它-Other/2018-03-15-3d.markdown
@@ -9,6 +9,8 @@ author: # Add name author (optional)
 other: true
 ---
 
+{{site.label1}} <a href="https://github.com/leach-chen/leach-chen.github.io/" target="\_blank">Leach Chen</a> {{site.label2}}
+
 ## H5 ##
 WebGL  WebVR WebAR<br>
 <a href="https://www.ddd.online/" style="text-decoration: none;" target="\_blank" title="">https://www.ddd.online/</a>
