--- a/_posts/其它-Other/2018-06-26-git.markdown
+++ b/_posts/其它-Other/2018-06-26-git.markdown
@@ -8,6 +8,9 @@ tags: [Other]
 author: # Add name author (optional)
 other: true
 ---
+
+{{site.label1}} <a href="https://github.com/leach-chen/leach-chen.github.io/" target="\_blank">Leach Chen</a> {{site.label2}}
+
 Git命令行比打开客户端操作更快捷，持续更新。
 
 
